# INF2004-T58-Project

./: .gitignore  CMakeLists.txt  README.md  lwipopts.h  main.c
driver/barcode/: CMakeLists.txt
driver/encoder/: CmakeLists.txt  encoder.c
driver/irline/: CMakeLists.txt  irline.c  irline.h
driver/irline/barcode/: CMakeLists.txt  barcode.c  barcode.h  lwipopts.h
driver/magnometer/: CMakeLists.txt  magnometer.c  magnometer.h
driver/motor/: CmakeLists.txt  motor.c  motor.h  motor_driver_demo.c
driver/ultrasonic/: CmakeLists.txt  ultrasonic.c  ultrasonic.h  ultrasonic_duplicate.h
driver/wifi/: CMakeLists.txt  cgi.h  http_server.c  http_server.h  lwipopts.h  makefsdata.c  makefsdata.py  server.c  server.js  ssi.h  tcp_server.c  tcp_server.h  wifi.c  wifi.h
driver/wifi/cgi_ssi/www/: index.shtml
driver/wifi/express/: index.html  index.js  package-lock.json  package.json
driver/wifi/tcp/: CMakeLists.txt  http_server.c  lwipopts.h  main.c  tcp_server.c  tcp_server.h
driver/wifi/tcp/www/: index.shtml
driver/wifi/www/: index.shtml
freertos/: CMakeLists.txt
freertos/main/: CMakeLists.txt
main/: CMakeLists.txt  main.c
